--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc_version = "0.8.19"
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+sepolia = "https://eth-sepolia.g.alchemy.com/v2/E3bpmyTpH0nVKzk87OMa3iBk4x7r8nzT"
