--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,13 @@
     "@walletconnect/core": "^2.17.1",
     "@walletconnect/utils": "^2.17.1",
     "ethers": "^6.13.2",
+    "ethersjs": "^0.0.1-security",
     "next": "14.2.11",
     "pino-pretty": "^11.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "wagmi": "^2.12.11"
+    "wagmi": "^2.13.0"
   },
   "devDependencies": {
     "postcss": "^8",
