--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reown/walletkit": "^1.1.1",
     "@walletconnect/core": "^2.17.1",
     "@walletconnect/utils": "^2.17.1",
+    "alchemy-sdk": "^3.5.0",
     "ethers": "^6.13.2",
     "ethersjs": "^0.0.1-security",
     "next": "14.2.11",
